Menu principal adicionado

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
       <div id="divPrincipal">
         <!-- Nome do blog -->
         <a href="#"><img src="imagens/01.png" id="logo"/></a>
+        
+        <!--Menu principal-->
+        <center>
+          <nav id="menu">
+                   <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">Posts</a></li>
+                      <li><a href="#">Novidades</a></li>
+                      <li><a href="#">Quem Somos</a></li>
+                      <li id="contato"><a href="#">Contato</a></li>
+                   </ul>
+           </nav>
+          </center>
 
         <!-- Conteúdo do blog -->
         <div id="conteudo">
@@ -27,7 +40,7 @@
           </center>
 
        </div>
-
+           
       </div>
 
   </body>
