Final da Página adicionada

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           </center>
 
        </div>
-           
+           <!--Final da página adicionada-->
+           <footer id="finalPagina">&copy; Desenvolvedores: JOZIMAR & MATHEUS</footer>
       </div>
 
   </body>
