Div Lateral Direita Adicionada, como também foram feitas alterações no Final da Página

--- a/index.html
+++ b/index.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="css/index.css">
-    <meta charset="utf-8">
-    <title>:. BloGIT .:</title>
-  </head>
-  <body>
+     <head>
+           <link rel="stylesheet" href="css/index.css">
+           <meta charset="utf-8">
+           <title>:. BloGIT .:</title>
+     </head>
+<body>
       <!-- Div Principal -->
       <div id="divPrincipal">
-        <!-- Nome do blog -->
-        <a href="#"><img src="imagens/01.png" id="logo"/></a>
-        
-        <!--Menu principal-->
-        <center>
-          <nav id="menu">
-                   <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Posts</a></li>
-                      <li><a href="#">Novidades</a></li>
-                      <li><a href="#">Quem Somos</a></li>
-                      <li id="contato"><a href="#">Contato</a></li>
-                   </ul>
-           </nav>
-          </center>
 
-        <!-- Conteúdo do blog -->
-        <div id="conteudo">
-          <!--conteúdo das Postagens -->
-          <center>
-            <iframe id="iframe" src=""></iframe>
-          </center>
+      <!-- Nome do blog -->
+      <a href="#"><img src="imagens/01.png" id="logo"/></a>
 
-          <!-- Botões Anterior e Próxima Página -->
-          <center>
-          <div id="antProx">
-          <button id="ant">&#10094;</button>
-          <button id="prox">&#10095;</button>
-          </div>
-          </center>
+      <!-- Menu Principal -->
+      <center>
+              <nav id="menu">
+                             <ul>
+                                 <li><a href="#">Home</a></li>
+                                 <li><a href="#">Posts</a></li>
+                                 <li><a href="#">Novidades</a></li>
+                                 <li><a href="#">Quem Somos</a></li>
+                                 <li><a href="#">Contato</a></li>
+                             </ul>
+              </nav>
+      </center>
 
-       </div>
-           <!--Final da página adicionada-->
-           <footer id="finalPagina">&copy; Desenvolvedores: JOZIMAR & MATHEUS</footer>
+      <!-- Barra Fluruante a Direita -->
+      <div id="ferramentas">
+                            <div id="barra">
+                            <h4 id="titulo">Ferramentas</h4>
+                            </div>
+                                  <center>
+                                  <button id="ferr01"></button>
+                                  <button id="ferr02"></button>
+                                  <button id="ferr03"></button>
+                                  <button id="ferr04"></button>
+                                  </center>
       </div>
 
-  </body>
+      <!-- Conteúdo do blog -->
+      <div id="conteudo">
+
+                         <!--conteúdo das Postagens -->
+                         <center>
+                         <iframe id="iframe" src=""></iframe>
+                         </center>
+
+      <!-- Botões Anterior e Próxima Página -->
+      <center>
+              <div id="antProx">
+              <button id="ant">&#10094;</button>
+              <button id="prox">&#10095;</button>
+              </div>
+      </center>
+      </div>
+
+      <!-- Final da Página -->
+      <footer id="finalPagina">&copy; Desenvolvedores: JOZIMAR & MATHEUS <div id="topo">
+                                                                                        <center>
+                                                                                                <a id="subir" href="#top">Topo</a>
+                                                                                        </center>
+                                                                         </div>
+     </footer>
+
+     </div>
+
+ </body>
 </html>
