Página Home Adicionada

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       <div id="divPrincipal">
 
       <!-- Nome do blog -->
-      <a href="#"><img src="imagens/01.png" id="logo"/></a>
+      <a href="paginas/home.html" target="iframe"><img src="imagens/01.png" id="logo"/></a>
 
       <!-- Menu Principal -->
       <center>
               <nav id="menu">
                              <ul>
-                                 <li><a href="#">Home</a></li>
+                                 <li><a href="paginas/home.html" target="iframe">Home</a></li>
                                  <li><a href="#">Posts</a></li>
                                  <li><a href="#">Novidades</a></li>
                                  <li><a href="#">Quem Somos</a></li>
-                                 <li><a href="#">Contato</a></li>
+                                 <li><a href="paginas/contato.html" target="iframe">Contato</a></li>
                              </ul>
               </nav>
       </center>
@@ -43,7 +43,7 @@
 
                          <!--conteúdo das Postagens -->
                          <center>
-                         <iframe id="iframe" src=""></iframe>
+                         <iframe name="iframe" id="iframe" src="paginas/home.html"></iframe>
                          </center>
 
       <!-- Botões Anterior e Próxima Página -->
