--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                  <li><a href="paginas/home.html" target="iframe">Home</a></li>
                                  <li><a href="#">Posts</a></li>
                                  <li><a href="#">Novidades</a></li>
-                                 <li><a href="#">Quem Somos</a></li>
+                                 <li><a href="paginas/quemSomos.html" target="iframe">Quem Somos</a></li>
                                  <li><a href="paginas/contato.html" target="iframe">Contato</a></li>
                              </ul>
               </nav>
@@ -64,6 +64,6 @@
      </footer>
 
      </div>
-
+      <script src="javascript/botao.js"></script>
  </body>
 </html>
