Redes Sociais Adicionadas no Final da Página, botão Novidades Removido.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
               <nav id="menu">
                              <ul>
                                  <li><a href="paginas/home.html" target="iframe">Home</a></li>
-                                 <li><a href="#">Posts</a></li>
-                                 <li><a href="#">Novidades</a></li>
+                                 <li><a href="#">Ferramentas</a></li>
                                  <li><a href="paginas/quemSomos.html" target="iframe">Quem Somos</a></li>
                                  <li><a href="paginas/contato.html" target="iframe">Contato</a></li>
                              </ul>
@@ -28,7 +27,7 @@
       <!-- Barra Fluruante a Direita -->
       <div id="ferramentas">
                             <div id="barra">
-                            <h4 id="titulo">Ferramentas</h4>
+                            <h4 id="titulo">Posts</h4>
                             </div>
                                   <center>
                                   <button id="ferr01"></button>
@@ -56,7 +55,17 @@
       </div>
 
       <!-- Final da Página -->
-      <footer id="finalPagina">&copy; Desenvolvedores: JOZIMAR & MATHEUS <div id="topo">
+      <footer id="finalPagina"><div id="redes">
+                               <h4>Redes Sociais</h4>
+                               <a href="https://www.facebook.com/jozymar.soares"><img id="imgFace" src="imagens/face.png" alt="Facebook" /></a>
+                               <b id="numeros">55 (83) 9 9907-5285<br/>
+                                  55 (88) 9 9988-2734</b>
+                               <img id="imgWha" src="imagens/wha.png" alt="WhatsApp" />
+                              </div><br/>
+
+                              &copy; Desenvolvedores: JOZIMAR & MATHEUS
+
+                                                                         <div id="topo">
                                                                                         <center>
                                                                                                 <a id="subir" href="#top">Topo</a>
                                                                                         </center>
