--- a/paginas/home.html
+++ b/paginas/home.html
@@ -13,12 +13,12 @@
         <img id="imgControle" src="../imagens/cdv.png" alt="Controle de Versão" />
 
         <p>
-              Controle de versão é um sistema que tem por finalidade gerenciar versões
-              diferentes de um arquivo, permitindo assim uma melhor organização de
-              projetos, esse sistema permite ao usuário total controle do histórico de
-              desenvolvimento e ainda uma série de utilidades como: modificar uma versão,
-              incluir novas funcionalidades, recuperar projetos em estados anteriores e
-              tudo isso sem alterar nada em seu projeto principal, pois todas as
+              Controle de versão é um sistema que tem por finalidade gerenciar versões</br>
+              diferentes de um arquivo, permitindo assim uma melhor organização de</br>
+              projetos, esse sistema permite ao usuário total controle do histórico de</br>
+              desenvolvimento e ainda uma série de utilidades como: modificar uma versão,</br>
+              incluir novas funcionalidades, recuperar projetos em estados anteriores e</br>
+              tudo isso sem alterar nada em seu projeto principal, pois todas as</br>
               modificações do projeto ficam armazenadas caso seja necessário recuperar
               uma versão anterior.
         </p>
@@ -28,12 +28,12 @@
         <img id="imgMudancas" src="../imagens/gdm.jpg" alt="Controle de Versão" />
 
         <p>
-              Gerenciamento de mudanças é sempre necessário em um projeto, pois é esse
-              processo de gerenciamento que controla todas as mudanças que ocorrem no mesmo.
-              Ele auxilia a decidir se essas mudanças são realmente necessárias e qual as
-              suas utilidades, por isso é muito útil e deve ser aplicado durante todo o
-              projeto. Com o gerenciamento de mudanças é possível monitorar todos os
-              processos ocorridos e ainda controlar todas as alterações contidas nele,
+              Gerenciamento de mudanças é sempre necessário em um projeto, pois é esse</br>
+              processo de gerenciamento que controla todas as mudanças que ocorrem no mesmo.</br>
+              Ele auxilia a decidir se essas mudanças são realmente necessárias e qual as</br>
+              suas utilidades, por isso é muito útil e deve ser aplicado durante todo o</br>
+              projeto. Com o gerenciamento de mudanças é possível monitorar todos os</br>
+              processos ocorridos e ainda controlar todas as alterações contidas nele,</br>
               tornado assim seu desenvolvimento mais seguro.
         </p>
 
@@ -43,10 +43,10 @@
 
 
         <p>
-              Integração contínua é uma técnica de desenvolvimento muito eficaz, onde
-              vários indivíduos trabalham diariamente fazendo integrações, podem ser
-              feitas várias em apenas um dia. Essas integrações são verificadas e nelas
-              são realizados testes com o objetivo de se possivelmente haver erro em
+              Integração contínua é uma técnica de desenvolvimento muito eficaz, onde</br>
+              vários indivíduos trabalham diariamente fazendo integrações, podem ser</br>
+              feitas várias em apenas um dia. Essas integrações são verificadas e nelas</br>
+              são realizados testes com o objetivo de se possivelmente haver erro em</br>
               alguma seja o mais rápido possível solucionado, tornado assim o desenvolvimento
               do projeto mais rápido e integro.
         </p>
