--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <nav id="menu">
                              <ul>
                                  <li><a href="paginas/home.html" target="iframe">Home</a></li>
-                                 <li><a href="#">Ferramentas</a></li>
+                                 <li><a href="paginas/ferramentas.html" target="iframe">Ferramentas</a></li>
                                  <li><a href="paginas/quemSomos.html" target="iframe">Quem Somos</a></li>
                                  <li><a href="paginas/contato.html" target="iframe">Contato</a></li>
                              </ul>
