Botões do final da página alterados para numeros e links de ferramentas adicionados

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 
       <!-- Botões Anterior e Próxima Página -->
       <center>
-              <div id="antProx">
-              <button id="ant">&#10094;</button>
-              <button id="prox">&#10095;</button>
-              </div>
+              <ul class="paginacao">
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+              </ul>
       </center>
       </div>
 
