--- a/paginas/ferramentas.html
+++ b/paginas/ferramentas.html
@@ -6,9 +6,9 @@
     <body>
         <center>
             <h1>Algumas ferramentas</h1></br></br></br>
-            <a href="#"><img id="ferramentas" src="../imagens/git.png"/></a></br>
-            <a href="#"><img id="ferramentas" src="../imagens/mantis.jpg"/></a></br>
-            <a href="#"><img id="ferramentas" src="../imagens/maven.png"/></a>
+            <a href="https://git-scm.com/" target="_blank"><img id="ferramentas" src="../imagens/git.png"/></a></br>
+            <a href="https://www.mantisbt.org/" target="_blank"><img id="ferramentas" src="../imagens/mantis.jpg"/></a></br>
+            <a href="https://maven.apache.org/" target="_blank"><img id="ferramentas" src="../imagens/maven.png"/></a>
         </center>
     </body>
 </html>
