Primeira Postagem Adicionada, como também página Home alterada

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
       </center>
 
       <!-- Barra Fluruante a Direita -->
-      <div id="ferramentas">
+      <div id="postagens">
                             <div id="barra">
                             <h4 id="titulo">Posts</h4>
                             </div>
                                   <center>
-                                  <button id="ferr01"></button>
-                                  <button id="ferr02"></button>
-                                  <button id="ferr03"></button>
-                                  <button id="ferr04"></button>
+                                  <button id="post01"></button>
+                                  <button id="post02"></button>
+                                  <button id="post03"></button>
+                                  <button id="post04"></button>
+                                  <button id="post05"><img src="imagens/post05.png" alt="" /></button>
                                   </center>
       </div>
 
@@ -51,6 +52,7 @@
                   <li><a href="#">2</a></li>
                   <li><a href="#">3</a></li>
                   <li><a href="#">4</a></li>
+                  <li><a href="paginas/post05.html" target="iframe">5</a></li>
               </ul>
       </center>
       </div>
@@ -74,6 +76,6 @@
      </footer>
 
      </div>
-      <script src="javascript/botao.js"></script>
+      <script src="script/index.js"></script>
  </body>
 </html>
