--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                                   <button id="post01"></button>
                                   <button id="post02"></button>
                                   <button id="post03"></button>
-                                  <button id="post04"></button>
-                                  <button id="post05"><img src="imagens/post05.png" alt="" /></button>
+                                  <button id="post04"><img src="imagens/post04.png" alt="post04" /></button>
+                                  <button id="post05"><img src="imagens/post05.png" alt="post05" /></button>
                                   </center>
       </div>
 
@@ -51,7 +51,7 @@
               <ul class="paginacao">
                   <li><a href="#">2</a></li>
                   <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
+                  <li><a href="paginas/post04.html" target="iframe">4</a></li>
                   <li><a href="paginas/post05.html" target="iframe">5</a></li>
               </ul>
       </center>
