Terceira Postagem Adicionada

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                   <center>
                                   <button id="post01"></button>
                                   <button id="post02"></button>
-                                  <button id="post03"></button>
+                                  <button id="post03"><img src="imagens/post03.png" alt="post03" /></button>
                                   <button id="post04"><img src="imagens/post04.png" alt="post04" /></button>
                                   <button id="post05"><img src="imagens/post05.png" alt="post05" /></button>
                                   </center>
@@ -50,7 +50,7 @@
       <center>
               <ul class="paginacao">
                   <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
+                  <li><a href="paginas/post03.html" target="iframe">3</a></li>
                   <li><a href="paginas/post04.html" target="iframe">4</a></li>
                   <li><a href="paginas/post05.html" target="iframe">5</a></li>
               </ul>
