Quarta postagem adicionada

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                                   <center>
                                   <button id="post01"></button>
-                                  <button id="post02"></button>
+                                  <button id="post02">Gerenciamento de Projetos</button>
                                   <button id="post03"><img src="imagens/post03.png" alt="post03" /></button>
                                   <button id="post04"><img src="imagens/post04.png" alt="post04" /></button>
                                   <button id="post05"><img src="imagens/post05.png" alt="post05" /></button>
@@ -49,7 +49,7 @@
       <!-- Botões Anterior e Próxima Página -->
       <center>
               <ul class="paginacao">
-                  <li><a href="#">2</a></li>
+                  <li><a href="paginas/post02.html" target="iframe">2</a></li>
                   <li><a href="paginas/post03.html" target="iframe">3</a></li>
                   <li><a href="paginas/post04.html" target="iframe">4</a></li>
                   <li><a href="paginas/post05.html" target="iframe">5</a></li>
