Troca de imagens por textos na Div lateral Direita

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                                   <center>
                                   <button id="post01"></button>
                                   <button id="post02">Gerenciamento de Projetos</button>
-                                  <button id="post03"><img src="imagens/post03.png" alt="post03" /></button>
-                                  <button id="post04"><img src="imagens/post04.png" alt="post04" /></button>
-                                  <button id="post05"><img src="imagens/post05.png" alt="post05" /></button>
+                                  <button id="post03">Trac</button>
+                                  <button id="post04">Selenium</button>
+                                  <button id="post05">Gerência de Configurações
+e Mudanças</button>
                                   </center>
       </div>
 
