--- a/paginas/post03.html
+++ b/paginas/post03.html
@@ -19,17 +19,18 @@
     <img id ="imgTrac" src="../imagens/trac.png" alt="Trac"/>
 
     <p>
-       O Trac é uma ferramenta Open Source e de interface web que é utilizada para o
+       O Trac é uma ferramenta de código aberto e de interface web que é usado para o
        controle de projetos de desenvolvimento de software. O seu objetivo é auxiliar
        o desenvolvedor a controlar as mudanças do projeto, entender o porquê de cada
        uma das alterações e qual o seu impacto no projeto como um todo.
    </p>
 
     <p>
-       O Trac possui recursos para o controle de mudanças como Wiki para documentação
-       colaborativa e referência cruzada entre os elementos do mesmo. Possui ainda
-       Integração com o Subversion, ou seja, ele também funciona como um browser do
-       repositório existente no Subversion. E também o acompanhamento da evolução do projeto.
+       O Trac possui recursos para o controle de mudanças como Wiki que também é 
+       uma ótima ferramenta para documentação colaborativa e ainda referência cruzada 
+       entre os elementos do mesmo. Possui Integração com o Subversion, ou seja,
+       ele também funciona como um browser do repositório existente no Subversion.
+       E faz o acompanhamento da evolução do projeto.
     </p>
 
     <p>
@@ -41,16 +42,16 @@
      </p>
 
      <p>
-        Além disso tudo, o Trac possui a migração, onde é possível migrar os tickets de
+        Além disso tudo, o Trac possui a migração, onde é possível migrar os arquivos de
         outras ferramentas desse mesmo tipo para ele. No site do Trac há scripts para
         migração do Bugzilla, Sourceforge e Mantis, como se usa no
-        Trac uma base de dados SQL, pode se inserir os tickets direto na base de dados.
+        Trac uma base de dados SQL, pode-se inserir os arquivos direto na base de dados.
     </p>
 
      <p>
         A sua configuração é feita por um arquivo chamado trac.ini, onde através dele
         altera-se o tipo de repositório, o caminho até ele e as seções do trac que são:
-        wiki, timeline, browser, configurações dos tickets que ainda podem ser customizáveis
+        wiki, timeline, browser, configurações dos arquivos que ainda podem ser customizáveis
         de acordo com a preferência do usuário. O Trac é uma ferramenta com muitas
         funcionalidades e pode ser muito útil em projetos, pois ele é muito flexível em
         sua totalidade, possibilitando assim uma total liberdade para desenvolver seu
