--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <div id="divPrincipal">
 
       <!-- Nome do blog -->
-      <a href="paginas/home.html" target="iframe"><img src="imagens/01.png" id="logo"/></a>
+      <a href="paginas/post01.html" target="iframe"><img src="imagens/01.png" id="logo"/></a>
 
       <!-- Menu Principal -->
       <center>
               <nav id="menu">
                              <ul>
-                                 <li><a href="paginas/home.html" target="iframe">Home</a></li>
+                                 <li><a href="paginas/post01.html" target="iframe">Home</a></li>
                                  <li><a href="paginas/ferramentas.html" target="iframe">Ferramentas</a></li>
                                  <li><a href="paginas/quemSomos.html" target="iframe">Quem Somos</a></li>
                                  <li><a href="paginas/contato.html" target="iframe">Contato</a></li>
@@ -30,7 +30,7 @@
                             <h4 id="titulo">Posts</h4>
                             </div>
                                   <center>
-                                  <button id="post01"></button>
+                                  <button id="post01">Git</button>
                                   <button id="post02">Gerenciamento de Projetos</button>
                                   <button id="post03">Trac</button>
                                   <button id="post04">Selenium</button>
@@ -44,16 +44,17 @@ e Mudanças</button>
 
                          <!--conteúdo das Postagens -->
                          <center>
-                         <iframe name="iframe" id="iframe" src="paginas/home.html"></iframe>
+                         <iframe name="iframe" id="iframe" src="paginas/post01.html"></iframe>
                          </center>
 
       <!-- Botões Anterior e Próxima Página -->
       <center>
               <ul class="paginacao">
-                  <li><a href="paginas/post02.html" target="iframe">2</a></li>
-                  <li><a href="paginas/post03.html" target="iframe">3</a></li>
-                  <li><a href="paginas/post04.html" target="iframe">4</a></li>
-                  <li><a href="paginas/post05.html" target="iframe">5</a></li>
+                  <li><a id="bt01" href="paginas/post01.html" target="iframe">1</a></li>
+                  <li><a id="bt02" href="paginas/post02.html" target="iframe">2</a></li>
+                  <li><a id="bt03" href="paginas/post03.html" target="iframe">3</a></li>
+                  <li><a id="bt04" href="paginas/post04.html" target="iframe">4</a></li>
+                  <li><a id="bt05" href="paginas/post05.html" target="iframe">5</a></li>
               </ul>
       </center>
       </div>
