Quinta postagem adicionada e erro dos botões do final da pagina corrigidos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <h4 id="titulo">Posts</h4>
                             </div>
                                   <center>
-                                  <button id="post01">Git</button>
+                                  <button id="post01">Controle de versão</button>
                                   <button id="post02">Gerenciamento de Projetos</button>
                                   <button id="post03">Trac</button>
                                   <button id="post04">Selenium</button>
